ext-basic-tls/ingress-reencrypt.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-tls-reencryption
  namespace: confluent
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location / {
    #     proxy_set_header Upgrade $http_upgrade;
    #     proxy_http_version 1.1;
    #     proxy_set_header X-Forwarded-Host $http_host;
    #     proxy_set_header X-Forwarded-Proto $scheme;
    #     proxy_set_header X-Forwarded-For $remote_addr;
    #     proxy_set_header Host $host;
    #     proxy_set_header Connection "upgrade";
    #     proxy_cache_bypass $http_upgrade;
    #   }
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - schemaregistry.confluent.acme.com
      - connect.confluent.acme.com
      - ksqldb.confluent.acme.com
      - controlcenter.confluent.acme.com
      secretName: ingress-tls
  rules:
    - host: schemaregistry.confluent.acme.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: schemaregistry-bootstrap
              port:
                number: 8081
    - host: connect.confluent.acme.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: connect-bootstrap
              port:
                number: 8083
    - host: ksqldb.confluent.acme.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: ksqldb-bootstrap
              port:
                number: 8088
    - host: controlcenter.confluent.acme.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: controlcenter-0-internal
              port:
                number: 9021
